--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <title>first websit</title>
     </head>
     <body>
-        <big><H1>Hello!! this is mmy 1st big heading </H1></big>
+        <big><H1>Hello!! this is mmy 1st big heading.</H1></big>
     </body>
 </html>
