--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Unnkown Website</title>
+        <title>first websit</title>
     </head>
-    <body style="background-color: black;">
-        <p style= "background-color: aliceblue;" "color: rgb(107, 215, 241);">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio dolor perspiciatis qui alias voluptatem eaque quaerat illum quo deleniti quod placeat quos ad, necessitatibus reiciendis. Porro molestiae, blanditiis esse dignissimos voluptatem, minima dolores, unde atque nostrum facere est quisquam nisi.</p>
-        <p style="background-color: rgb(241, 207, 13);  color: rgb(31, 9, 231);" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio dolor perspiciatis qui alias voluptatem eaque quaerat illum quo deleniti quod placeat quos ad, necessitatibus reiciendis. Porro molestiae, blanditiis esse dignissimos voluptatem, minima dolores, unde atque nostrum facere est quisquam nisi.</p>
-        <p style="color: rgb(128, 0, 90); background-color: chartreuse;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio dolor perspiciatis qui alias voluptatem eaque quaerat illum quo deleniti quod placeat quos ad, necessitatibus reiciendis. Porro molestiae, blanditiis esse dignissimos voluptatem, minima dolores, unde atque nostrum facere est quisquam nisi.</p>
+    <body>
+        <big><H1>Hello!! this is mmy 1st big heading.</H1></big>
+        <big><H1>Hello!! this is mmy 2nd big heading.</H1></big>
+        <big><H1>Hello!! this is mmy 2nd big heading.</H1></big>
+        <big><H1>Hello!! this is mmy 2nd big heading.</H1></big>
+        <big><H1>Hello!! this is mmy 2nd big heading.</H1></big>
     </body>
 </html>
